# baymax

./: .gitignore
.claude/: CLAUDE.md  settings.json
.claude/not_agents/: ai-medical-safety-expert.md  aws-infrastructure-expert.md  backend-fastapi-expert.md  database-expert.md  devops-expert.md  frontend-react-expert.md  pwa-expert.md  security-compliance-expert.md
.cursor/rules/: 01-project-commands.mdc  05-infra-and-cloud.mdc  10-frontend-react.mdc  10-typescript.mdc  12-frontend-pwa.mdc  20-backend-fastapi.mdc  21-python-style-typing.mdc  23-python-asyncio.mdc  24-python-httpx.mdc  26-python-pydantic-v2.mdc  27-python-sqlalchemy2.mdc  30-database-postgres.mdc  30-testing.mdc  31-database-dynamodb.mdc  35-vector-search.mdc  40-auth-and-access.mdc  40-security-basics.mdc  41-python-testing.mdc  42-python-workers-celery-apscheduler.mdc  50-api-contracts.mdc  55-messaging-and-events.mdc  60-ai-usage-and-phi.mdc  65-observability.mdc  70-security-operational.mdc  75-cost-optimization.mdc  80-docker-and-runtime.mdc  90-devops-and-ci.mdc  98-cursor-behavior.mdc
.kiro/specs/ai-patient-intake-emr/: design.md  requirements.md  tasks.md
backend/: .env.example  ARCHITECTURE_AUDIT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_basic.py  test_domain.py  test_summary.py
backend/app/: main.py
backend/app/api/: __init__.py  appointments.py  auth.py  encounters.py  health.py  intake.py  patients.py  providers.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/domain/intake/: value_objects.py
backend/app/domain/patient/: aggregate.py  entities.py  repository.py  services.py  specifications.py  value_objects.py
backend/app/domain/shared/: aggregate_root.py  entity.py  specification.py  value_object.py
backend/app/middleware/: audit.py  security.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  encounter.py  intake.py  patient.py  provider.py
backend/app/services/: ai_intake.py  audit.py  notification.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_appointments_api.py  test_auth_api.py  test_patients_api.py  test_websocket.py
backend/tests/load/: k6_load_test.js  test_load.py
backend/tests/unit/: test_ai_safety.py  test_schemas.py  test_security.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AudioVisualizer.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  modal.tsx  segmented-toggle.tsx  textarea.tsx
frontend/src/pages/: DoctorDashboard.tsx  EncounterDetail.tsx  Home.tsx  Intake.tsx  Landing.tsx
